k8s/reservation-mgmt/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: reservation-mgmt
spec:
  rules:
    - http:
        paths:
          - path: /reservations/
            pathType: Prefix
            backend: 
              service:
                name: reservations
                port: 
                  number: 3000
          - path: /auth/
            pathType: Prefix
            backend: 
              service:
                name: auth-http
                port: 
                  number: 3001
          - path: /payments/
            pathType: Prefix
            backend: 
              service:
                name: payments-http
                port: 
                  number: 3004
